Added the proper items they should have, added 5 player lives, changed it so the winner is based on the last man standing.