@@ -2,14 +2,12 @@ package org.mesmeralis.OITC.managers;
 
 import com.google.common.collect.Lists;
 import org.bukkit.*;
-import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.entity.Zombie;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.scheduler.BukkitScheduler;
-import org.bukkit.scoreboard.Team;
 import org.mesmeralis.OITC.Main;
 import org.mesmeralis.OITC.listeners.PlayerJoinQuitListener;
 import org.mesmeralis.OITC.utils.ColourUtils;
@@ -23,6 +21,9 @@ public class GameManager {
     public Main main;
     public boolean isGameRunning = false;
     public HashMap<Player, Integer> gameKills = new HashMap<>();
+    public List<Player> playersInGame = new ArrayList<Player>();
+    public HashMap<Player, Integer> playerLives = new HashMap<>();
+    public Set<Player> eliminated = new HashSet<>();
 
     public GameManager(Main main) {
         this.main = main;
@@ -33,9 +34,6 @@ public class GameManager {
     public void startGame() {
         AtomicInteger counter = new AtomicInteger(6);
         BukkitScheduler scheduler = Bukkit.getServer().getScheduler();
-        for (Player online : Bukkit.getOnlinePlayers()) {
-            gameKills.put(online.getPlayer(), 0);
-        }
         starting = scheduler.scheduleSyncRepeatingTask(main, () -> {
             int count = counter.getAndDecrement();
             Bukkit.getServer().broadcastMessage(ColourUtils.colour(prefix + "&eStarting in " + counter));
@@ -52,22 +50,26 @@ public class GameManager {
     ItemStack gameBow = new ItemStack(Material.BOW, 1);
     ItemStack gameArrow = new ItemStack(Material.ARROW, 1);
     ItemMeta bowMeta = gameBow.getItemMeta();
+    ItemStack gameSword = new ItemStack(Material.WOODEN_SWORD, 1);
+    ItemMeta swordMeta = gameSword.getItemMeta();
 
     public void giveItems() {
         for (Player online : Bukkit.getOnlinePlayers()) {
             online.getInventory().clear();
-            bowMeta.addEnchant(Enchantment.INFINITY, 1, false);
             bowMeta.setUnbreakable(true);
             gameBow.setItemMeta(bowMeta);
+            swordMeta.setUnbreakable(true);
+            gameSword.setItemMeta(swordMeta);
             online.getInventory().setItem(0, gameBow);
-            online.getInventory().setItem(1, gameArrow);
+            online.getInventory().setItem(1, gameSword);
+            online.getInventory().setItem(9, gameArrow);
         }
     }
 
     public void teleport() {
         Random randomLoc = new Random();
         Location location;
-        for (Player online : Bukkit.getOnlinePlayers()) {
+        for (Player online : playersInGame) {
             int locNumber = randomLoc.nextInt(10) + 1;
             location = new Location(Bukkit.getWorld(Objects.requireNonNull(main.getConfig().getString("gamespawn." + locNumber + ".world"))),
                     main.getConfig().getInt("gamespawn." + locNumber + ".x"), main.getConfig().getInt("gamespawn." + locNumber + ".y"),
@@ -78,42 +80,50 @@ public class GameManager {
     }
 
     public Player getWinner() {
-        int highest = 0;
-        Player winner = null;
-        for (Player online : Bukkit.getOnlinePlayers()) {
-            int amount = this.gameKills.getOrDefault(online.getPlayer(), 0);
-            if (highest < amount) {
-                highest = amount;
-                winner = online;
-            }
+        int playersLeft = this.playersInGame.size();
+        if(playersLeft == 1) {
+            return playersInGame.getFirst();
         }
-        return winner;
+        return null;
     }
 
     public int endGameTask;
 
     private void runGame() {
         Bukkit.getServer().getScheduler().cancelTask(starting);
+        playersInGame.addAll(Bukkit.getOnlinePlayers());
+        for (Player online : playersInGame) {
+            gameKills.put(online.getPlayer(), 0);
+            playerLives.put(online, 5);
+        }
         if(mode == null) {
             mode = Mode.DEFAULT;
-            for (Player online : Bukkit.getOnlinePlayers()) {
+            for (Player online : playersInGame) {
                 online.sendTitle(ColourUtils.colour("&c&lOne in the Chamber"), "Developed by SecMind", 20, 60, 20);
                 online.playSound(online, Sound.ENTITY_ENDER_DRAGON_GROWL, 10, 1);
                 main.data.createPlayer(online.getPlayer());
                 online.setGameMode(GameMode.ADVENTURE);
-                hideNameTags(online);
             }
         }
         if(mode == Mode.ZOMBIE) {
-            for (Player online : Bukkit.getOnlinePlayers()) {
+            for (Player online : playersInGame) {
                 online.sendTitle(ColourUtils.colour("&c&lOne in the Chamber"), ColourUtils.colour("&2ZOMBIE MODE"), 20, 60, 20);
                 online.playSound(online, Sound.ENTITY_ENDER_DRAGON_GROWL, 10, 1);
                 main.data.createPlayer(online.getPlayer());
                 online.setGameMode(GameMode.ADVENTURE);
-                hideNameTags(online);
             }
             runZombie();
             Bukkit.broadcastMessage(ColourUtils.colour(this.prefix + "&aA zombie will spawn at a random player's location every 30 seconds."));
+        }
+        if(mode == Mode.SHUFFLE) {
+            for (Player online : playersInGame) {
+                online.sendTitle(ColourUtils.colour("&c&lOne in the Chamber"), ColourUtils.colour("&3SHUFFLE MODE"), 20, 60, 20);
+                online.playSound(online, Sound.ENTITY_ENDER_DRAGON_GROWL, 10, 1);
+                main.data.createPlayer(online.getPlayer());
+                online.setGameMode(GameMode.ADVENTURE);
+            }
+            runShuffle();
+            Bukkit.broadcastMessage(ColourUtils.colour(this.prefix + "&aAll players will be randomly teleported to a new location every 30 seconds."));
         }
         giveItems();
         teleport();
@@ -123,33 +133,38 @@ public class GameManager {
     }
 
     public void startEndingTimer() {
+        eliminated.clear();
         Player winner = this.getWinner();
         Location lobby = new Location(Bukkit.getWorld(Objects.requireNonNull(main.getConfig().getString("lobby.world"))),
                 main.getConfig().getInt("lobby.x"), main.getConfig().getInt("lobby.y"), main.getConfig().getInt("lobby.z"),
                 main.getConfig().getInt("lobby.yaw"), main.getConfig().getInt("lobby.pitch"));
-        if (winner != null) {
+        if(mode == Mode.ZOMBIE) {
+            Bukkit.getScheduler().cancelTask(zombieSpawn);
+        }
+        if(mode == Mode.SHUFFLE) {
+            Bukkit.getScheduler().cancelTask(shuffle);
+        }
+        if(winner != null) {
             for (Player online : Bukkit.getOnlinePlayers()) {
                 online.sendTitle(ColourUtils.colour("&4&lGAME OVER"), ColourUtils.colour("&e" + getWinner().getName() + "&a won the game!"), 20, 60, 20);
                 online.playSound(online, Sound.ENTITY_PLAYER_LEVELUP, 10, 1);
                 online.getInventory().clear();
                 online.teleport(lobby);
                 online.setGameMode(GameMode.ADVENTURE);
-                team.removeEntry(online.getName());
             }
             winner.playSound(winner.getLocation(), Sound.ENTITY_PLAYER_LEVELUP, 10, 5);
             main.data.addPoints(winner.getUniqueId(), 15);
             main.data.addWins(winner.getUniqueId(), 1);
             gameKills.clear();
             isGameRunning = false;
-            Bukkit.getScheduler().cancelTask(zombieSpawn);
             Bukkit.getServer().broadcastMessage(ColourUtils.colour(prefix + "&eCongratulations to &a" + winner.getName() + "&e for winning."));
+            playersInGame.clear();
         }
         else {
             for (Player online : Bukkit.getOnlinePlayers()) {
                 online.sendTitle(ColourUtils.colour("&4&lGAME OVER"), ColourUtils.colour("&cThere was no winner."), 20, 60, 20);
                 online.playSound(online, Sound.BLOCK_ANVIL_FALL, 10, 1);
                 online.getInventory().clear();
-                team.removeEntry(online.getName());
                 if (main.getConfig().contains("lobby")) {
                     online.teleport(lobby);
                 }
@@ -175,17 +190,6 @@ public class GameManager {
         }, 6000L);
     }
 
-    Team team;
-    private void hideNameTags(Player player) {
-        if(Bukkit.getServer().getScoreboardManager().getMainScoreboard().getTeams().contains("hidenames")) {
-            team = Bukkit.getServer().getScoreboardManager().getMainScoreboard().registerNewTeam("hidenames");
-            team.setOption(Team.Option.NAME_TAG_VISIBILITY, Team.OptionStatus.NEVER);
-            team.addEntry(player.getName());
-        } else {
-            team = Bukkit.getServer().getScoreboardManager().getMainScoreboard().getTeam("hidenames");
-            team.addEntry(player.getName());
-        }
-    }
 
     public int zombieSpawn;
     private void runZombie() {
@@ -200,17 +204,31 @@ public class GameManager {
         }, 2300L);
     }
 
+    public int shuffle;
+    private void runShuffle() {
+        shuffle = Bukkit.getServer().getScheduler().scheduleSyncRepeatingTask(main, this::teleport, 100L, 600L);
+        Bukkit.broadcastMessage(ColourUtils.colour(prefix + "&aAll players have been shuffled!"));
+    }
+
     private Player getRandomPlayer() {
         List<Player> onlinePlayers = Lists.newArrayList(Bukkit.getOnlinePlayers());
         Collections.shuffle(onlinePlayers);
-        return onlinePlayers.get(0);
+        return onlinePlayers.getFirst();
     }
 
     public Mode mode;
     public enum Mode {
         DEFAULT,
         ZOMBIE,
-        QUICK;
+        SHUFFLE;
+    }
+
+    public ItemStack lobbyItem = new ItemStack(Material.RECOVERY_COMPASS, 1);
+    public void giveSpawnItem(Player player) {
+        player.getInventory().clear();
+        ItemMeta lobbyMeta = lobbyItem.getItemMeta();
+        lobbyMeta.setDisplayName("&aReturn to lobby.");
+        lobbyItem.setItemMeta(lobbyMeta);
     }
 
 
